FLASHCON 2018 video link added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<meta name="twitter:image:src" content="https://www.flashcoin.io/clients/flashcoin/images/social-fb-plate-flashcoin.jpg" />
 		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600|Open+Sans|Roboto" rel="stylesheet">
 		<link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
-		<link rel="stylesheet" href="css/04.style.css?ver=1.1" type="text/css" />
+		<link rel="stylesheet" href="css/04.style.css?ver=1.3" type="text/css" />
 		<!-- <link rel="stylesheet" href="css/swiper.css" type="text/css" /> -->
 		<link rel="stylesheet" href="css/dark.css" type="text/css" />
 		<link rel="stylesheet" href="css/animate.css" type="text/css" />
@@ -101,10 +101,11 @@
 					</div>
 					<!--<marquee onmouseover="this.stop()"
                    onmouseout="this.start()" scrollamount="10" direction="left" class="style41" style="padding-bottom:15px"><a href=" https://www.thenewswire.com/archives/A8vFpmoK-announcing-flashcon-2018-a-flash-community-event-with-lead-sponsor-binary-financial.html"  target="_blank"><b> FLASHcon 2018 will be in Vancouver, BC Canada on June 29th and 30th! Email patty@flashcoin.io to RSVP or for more information</b></a>
-                   </marquee><br>
+                   </marquee>-->
+                   <br>
                    <div class="text-center">
-                   	<a href="docs/FLASHCON_2018_Schedule_of_Events.pdf" target="_blank" class="button button-border button-rounded button-light button-large">FLASHcon Schedule</a>  <a href="https://youtu.be/2M7Gk-zRA-I" target="_blank" class="button button-border button-rounded button-light button-large">FLASHcon Live Feed 1</a>  <a href="https://vimeo.com/277749477" target="_blank" class="button button-border button-rounded button-light button-large">FLASHcon Live Feed 2</a>
-                   </div>-->
+                   	<a href="https://vimeo.com/277786305" target="_blank" class="button button-border button-rounded button-light button-large">FLASHCON 2018</a>
+                   </div>
 			</section>
 			<!-- #slider end -->
 
@@ -628,7 +629,7 @@
 									<p>FLASH supports any legal cryptocurrency exchange, including decentralized exchanges. Our community occasionally contributes funds to get FLASH listed. FLASH is ideal for exchanges, as the transfer speeds and transaction costs are very low and
 										because it is based on LTC, integration. If you operate an exchange and are interested in listing FLASH, please contact <a href="mailto:support@flashcoin.io" target="_top">support@flashcoin.io</a> to receive a file with details on our source
 										code repo for exchanges and a legal opinion regarding FLASH’s status as a security token (it’s a community coin, not a security)</p>
-									<ul class="grid-4 clients-grid nobottommargin clearfix">
+									<ul class="grid-3 clients-grid nobottommargin clearfix">
 										<li><a href="https://www.cryptopia.co.nz/" target="_blank"><img src="images/exchanges/cryptopia.png" alt="Flash Cryptopia exchange"></a></li>
 										<li><a href="https://einstein.exchange/" target="_blank"><img src="images/exchanges/einstein.jpg" alt="Flash Einstein exchange"></a></li>
 										<li><a href="https://crypto-bridge.org/" target="_blank"><img src="images/exchanges/crypto-bridge.png" alt="Flash exchange"></a></li>
