Youtube, Blog links added

--- a/header.html
+++ b/header.html
@@ -139,10 +139,15 @@
 											</a>
 										</li>
 										<li>
+											<a href="https://blog.flashcoin.io/" target="_blank">
+												<div>BLOG</div>
+											</a>
+										</li>
+										<!--<li>
 											<a href="https://charts.flashcoin.io/" target="_blank">
 												<div>CHARTS</div>
 											</a>
-										</li>
+										</li>-->
 										<li>
 											<a href="https://nodes.flashcoin.io/" target="_blank">
 												<div>NODES</div>
