--- a/our-team.html
+++ b/our-team.html
@@ -122,7 +122,7 @@
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
-												<h4>Deepak Kumar</h4><span>Technological Head | <a href="https://www.linkedin.com/in/deepak-yadav-9a37b0121/" target="_blank"><i class="fab fa-linkedin" style="font-size: 18px !important;"></i></a></span></div>
+												<h4>Deepak Kumar</h4><span>Technology Head | <a href="https://www.linkedin.com/in/deepak-yadav-9a37b0121/" target="_blank"><i class="fab fa-linkedin" style="font-size: 18px !important;"></i></a></span></div>
 										</div>
 									</div>
 								</div>
