Youtube, Blog links added

--- a/index.html
+++ b/index.html
@@ -914,6 +914,7 @@
 									<li><a href="https://bitcointalk.org/index.php?topic=1605453.0" target="_blank"><i class="fab fa-bitcoin"></i><span>BitcoinTalk</span></a></li>
 									<li><a href="https://www.reddit.com/r/FlashCoins/" target="_blank"><i class="fab fa-reddit"></i><span>Reddit</span></a></li>
 									<li><a href="https://steemit.com/@flash.coin" target="_blank"><i class="fas fa-comments"></i><span>SteemIt</span></a></li>
+									<li><a href="https://blog.flashcoin.io/" target="_blank"><i class="fa fa-rss-square"></i><span>Blog</span></a></li>
 								</ul>
 							</div>
 						</div>
