--- a/footer.html
+++ b/footer.html
@@ -130,6 +130,7 @@
 									<li><a href="https://bitcointalk.org/index.php?topic=1605453.0" target="_blank"><i class="fab fa-bitcoin"></i></a></li>
 									<li><a href="https://www.reddit.com/r/FlashCoins/" target="_blank"><i class="fab fa-reddit"></i></a></li>
 									<li><a href="https://steemit.com/@flash.coin" target="_blank"><i class="fas fa-comments"></i></a></li>
+									<li><a href="https://blog.flashcoin.io/" target="_blank"><i class="fa fa-rss-square"></i></a></li>
 								</ul>
 							</div>
 
