--- a/index.html
+++ b/index.html
@@ -79,18 +79,18 @@
 							<div class="col-lg-4 text-center" >
 								<img class="bottommargin-sm flash-icon-main" src="images/logo@2x.png"/>
 								<div class="bottommargin-sm">
-									<a class="display-centrally"><img src="images/_newsite/update/GetStartedButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="GetStartedButton"></a>
-									<a class="display-centrally"><img src="images/_newsite/update/WhitePaperButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="WhitePaperButton"></a>
+									<a class="display-centrally" href="#" data-scrollto="#about"><img src="images/_newsite/update/GetStartedButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="GetStartedButton"></a>
+									<a class="display-centrally" href="#" data-scrollto="#about"><img src="images/_newsite/update/WhitePaperButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="WhitePaperButton"></a>
 								</div>
 							</div>
 							<div class="col-lg-8 text-center" id="data-pulled">
 								<!--DATA PULLED-->
 								<div class="whitepaper bottommargin-sm">
-									<a href=""><img src="images/_newsite/update/FlashWebWallet.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="FlashWebWallet"></a>
+									<a href="https://wallet.flashcoin.io/" target="_blank"><img src="images/_newsite/update/FlashWebWallet.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="FlashWebWallet"></a>
 								</div>
 								<div class="whitepaper bottommargin-sm bottommargin-child">
-									<a href=""><img src="images/_newsite/update/DiscordButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="DiscordButton" ></a>
-									<a href=""><img src="images/_newsite/update/TelegramButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="TelegramButton" ></a>
+									<a href="https://discord.gg/2nFmMqA" target="_blank"><img src="images/_newsite/update/DiscordButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="DiscordButton" ></a>
+									<a href="https://t.me/joinchat/C5go9ExsGGNeVvForEgb6w" target="_blank"><img src="images/_newsite/update/TelegramButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="TelegramButton" ></a>
 								</div>
 								<form class="text-center">
 									<div class="row whitepaper bottommargin-sm text-center text-center clearfix flash-latest-news" style="border:1px solid; background-color:rgba(0, 0, 0, 0.5);">
