Updated homepage Images

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<!-- <link rel="stylesheet" href="css/magnific-popup.css" type="text/css" /> -->
 		<link rel="stylesheet" href="css/font-icons.css" type="text/css" />
 		<!-- <link rel="stylesheet" href="css/et-line.css" type="text/css" /> -->
-		<link rel="stylesheet" href="css/04.custom.css?234" type="text/css" />
+		<link rel="stylesheet" href="css/04.custom.css?ver=1.2" type="text/css" />
 		<link rel="stylesheet" href="css/responsive.css" type="text/css" />
 		<!-- Document Title
 	============================================= -->
@@ -43,13 +43,13 @@
 			function hover(element) {
 				var img = $(element).attr('data-imgname');
 				img = img+'Hover.png';
-			  element.setAttribute('src', 'images/_newsite/update/'+img);
+			  element.setAttribute('src', 'images/_newsite/web_img/'+img);
 			}
 
 			function unhover(element) {
 				var img = $(element).attr('data-imgname');
 				img = img+'.png';
-			  element.setAttribute('src', 'images/_newsite/update/'+img);
+			  element.setAttribute('src', 'images/_newsite/web_img/'+img);
 			}
 
 			</script>
@@ -77,20 +77,20 @@
 					<div class="">
 						<div class="row clearfix">
 							<div class="col-lg-4 text-center" >
-								<img class="bottommargin-sm flash-icon-main" src="images/logo@2x.png"/>
+								<img class="bottommargin-sm flash-icon-main" src="images/_newsite/web_img/WebsiteActualLogo.png"/>
 								<div class="bottommargin-sm">
-									<a class="display-centrally" href="#" data-scrollto="#about"><img src="images/_newsite/update/GetStartedButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="GetStartedButton"></a>
-									<a class="display-centrally" href="#" data-scrollto="#about"><img src="images/_newsite/update/WhitePaperButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="WhitePaperButton"></a>
+									<a class="display-centrally" href="#" data-scrollto="#about"><img src="images/_newsite/web_img/GetStartedButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="GetStartedButton"></a>
+									<a class="display-centrally" href="#" data-scrollto="#about"><img src="images/_newsite/web_img/WhitePaperButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="WhitePaperButton"></a>
 								</div>
 							</div>
 							<div class="col-lg-8 text-center" id="data-pulled">
 								<!--DATA PULLED-->
 								<div class="whitepaper bottommargin-sm">
-									<a href="https://wallet.flashcoin.io/" target="_blank"><img src="images/_newsite/update/FlashWebWallet.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="FlashWebWallet"></a>
+									<a href="https://wallet.flashcoin.io/" target="_blank"><img src="images/_newsite/web_img/FlashWebWallet.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="FlashWebWallet"></a>
 								</div>
 								<div class="whitepaper bottommargin-sm bottommargin-child">
-									<a href="https://discord.gg/2nFmMqA" target="_blank"><img src="images/_newsite/update/DiscordButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="DiscordButton" ></a>
-									<a href="https://t.me/joinchat/C5go9ExsGGNeVvForEgb6w" target="_blank"><img src="images/_newsite/update/TelegramButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="TelegramButton" ></a>
+									<a href="https://discord.gg/2nFmMqA" target="_blank"><img src="images/_newsite/web_img/DiscordButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="DiscordButton" ></a>
+									<a href="https://t.me/joinchat/C5go9ExsGGNeVvForEgb6w" target="_blank"><img src="images/_newsite/web_img/TelegramButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="TelegramButton" ></a>
 								</div>
 								<form class="text-center">
 									<div class="row whitepaper bottommargin-sm text-center text-center clearfix flash-latest-news" style="border:1px solid; background-color:rgba(0, 0, 0, 0.5);">
@@ -135,10 +135,10 @@
 									<div class="topmargin-lg text-center">
 										<h1>WHITEPAPER</h1>
 										<div class="whitepaper bottommargin-sm">
-											<a href="docs/FLASHWhitepaper.pdf" target="_blank"><img src="images/_newsite/update/WhitepaperEnglish.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="WhitepaperEnglish" ></a>
+											<a href="docs/FLASHWhitepaper.pdf" target="_blank"><img src="images/_newsite/web_img/WhitepaperEnglish.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="WhitepaperEnglish" ></a>
 										</div>
 										<div class="whitepaper bottommargin-sm">
-											<a href="docs/FLASHWhitepaper-Espanol.pdf" target="_blank"><img src="images/_newsite/update/WhitepaperEspanol.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="WhitepaperEspanol" ></a>
+											<a href="docs/FLASHWhitepaper-Espanol.pdf" target="_blank"><img src="images/_newsite/web_img/WhitepaperEspanol.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="WhitepaperEspanol" ></a>
 										</div>
 									</div>
 								</div>
@@ -151,7 +151,7 @@
 										<h4 style="font-weight: normal">FLASH is based on Litecoin, but even lighter. It’s very efficient and because the mining is minimal and done by volunteers, transaction fees are very low. Our goal is to create a safe and secure environment for community members to participate
 											in FLASH and facilitate communications and commerce without friction. Security is provided through our unique distributed node based governance model that we call GovNodes.</h4>
 										<div class="whitepaper bottommargin-sm">
-											<a href="#" data-scrollto="#flash-advantage"><img src="images/_newsite/update/FlashAdvantage.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="FlashAdvantage" ></a>
+											<a href="#" data-scrollto="#flash-advantage"><img src="images/_newsite/web_img/FlashAdvantage.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="FlashAdvantage" ></a>
 										</div>
 									</div>
 								</div>
