--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 		<script src="js/jquery.js"></script>
 		<script>
 			$(function() {
-
-						$('#header-wrap').load('header.html');
+					$('#header-wrap').load('header.html');
 					$('#footer-comman').load('footer.html');
 			});
 
@@ -138,7 +137,7 @@
 											<a href="docs/FLASHWhitepaper.pdf" target="_blank"><img src="images/_newsite/web_img/WhitepaperEnglish.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="WhitepaperEnglish" ></a>
 										</div>
 										<div class="whitepaper bottommargin-sm">
-											<a href="docs/FLASHWhitepaper-Espanol.pdf" target="_blank"><img src="images/_newsite/web_img/WhitepaperEspanol.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="WhitepaperEspanol" ></a>
+											<a href="docs/FLASHWhitepaper-Espanol.pdf" target="_blank"><img src="images/_newsite/web_img/WhitepaperSpanish.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="WhitepaperSpanish" ></a>
 										</div>
 									</div>
 								</div>
@@ -329,7 +328,8 @@
 								</div>
 								<div class="col-md-12">
 									<div class="promo promo-center">
-										<a href="our-team.html" class="button button-rounded button-reveal button-large button-yellow button-light tright"><i class="icon-line-arrow-right"></i><span>More</span></a>
+										<!-- <a href="our-team.html" class="button button-rounded button-reveal button-large button-yellow button-light tright"><i class="icon-line-arrow-right"></i><span>More</span></a> -->
+										<a href="our-team.html"><img src="images/_newsite/web_img/MoreButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="MoreButton" style="width:13%;"></a>
 									</div>
 								</div>
 							</div>
@@ -677,7 +677,8 @@
 								</ul>
 								<div class="col-md-12">
 									<div class="promo promo-center">
-										<a href="our-partners.html" class="button button-rounded button-reveal button-large button-yellow button-light tright"><i class="icon-line-arrow-right"></i><span>More</span></a>
+										<!-- <a href="our-partners.html" class="button button-rounded button-reveal button-large button-yellow button-light tright"><i class="icon-line-arrow-right"></i><span>More</span></a> -->
+										<a href="our-partners.html"><img src="images/_newsite/web_img/MoreButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="MoreButton" style="width:11%;"></a>
 									</div>
 								</div>
 							</div>
@@ -719,8 +720,10 @@
 										<h2>Flash <span>Web</span> Wallet</h2>
 									</div>
 									<span>With the web wallet, you can use an email address or your public address for sending and receiving coins.<br /><br />
-								The web wallet supports most browsers and mobile devices. There's nothing to download or install for maximum convenience.<br /></span>
-									<a href="https://wallet.flashcoin.io/" target="_blank" class="button button-3d topmargin-sm" style="margin-left: 25px;">Flash Web Wallet</a>
+										The web wallet supports most browsers and mobile devices. There's nothing to download or install for maximum convenience.<br/>
+									</span>
+									<a href="https://wallet.flashcoin.io/" target="_blank"><img src="images/_newsite/web_img/WebWalletButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="WebWalletButton" style="width:70%; margin-top:20px;"></a>
+									<!-- <a href="https://wallet.flashcoin.io/" target="_blank" class="button button-3d topmargin-sm" style="margin-left: 25px;">Flash Web Wallet</a> -->
 									<!-- <a href="https://play.google.com/store/apps/details?id=com.flash.wallet.android" target="_blank" class="button button-3d topmargin-sm">FLASH Android Wallet</a> -->
 									<div class="fancy-title title-border">
 										<h2>Flash <span>Android</span> Wallet</h2>
@@ -785,7 +788,8 @@
 										<div class="fancy-title title-border">
 											<h2>Flash <span>Paper</span> Wallet</h2>
 										</div>
-										<a href="https://paperwallet.flashcoin.io/" target="_blank" class="button button-3d topmargin-sm" style="margin-left: 25px;">Flash Paper Wallet</a>
+										<a href="https://paperwallet.flashcoin.io/" target="_blank" class="button topmargin-sm app-store-btn"><img src="images/_newsite/web_img/PaperWalletButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="PaperWalletButton" style="width:80%;"></a>
+										<!-- <a href="https://paperwallet.flashcoin.io/" target="_blank" class="button button-3d topmargin-sm" style="margin-left: 25px;">Flash Paper Wallet</a> -->
 									</div>
 								</div>
 							</div>
@@ -814,14 +818,17 @@
 							</div>
 							<div class="center">
 								<!--<a href="docs/FLASHWhitepaper.pdf" target="_blank"><img style="width:300px" src="images/NewFlashWhitePaper2018.png"></a>-->
-								<a href="docs/FLASHWhitepaper.pdf" target="_blank" class="button button-3d button-yellow button-xlarge nobottommargin">ENGLISH</a>
-								<a href="docs/FLASHWhitepaper-Espanol.pdf" target="_blank" class="button button-3d button-yellow button-xlarge nobottommargin">Español</a>
+								<!-- <a href="docs/FLASHWhitepaper.pdf" target="_blank" class="button button-3d button-yellow button-xlarge nobottommargin">ENGLISH</a> -->
+								<a href="docs/FLASHWhitepaper.pdf" target="_blank"><img src="images/_newsite/web_img/EnglishButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="EnglishButton" style="width:15%; margin-right:10px;"></a>
+								<a href="docs/FLASHWhitepaper-Espanol.pdf" target="_blank"><img src="images/_newsite/web_img/EspanolButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="EspanolButton" style="width:15%; margin-left:10px;"></a>
+								<!-- <a href="docs/FLASHWhitepaper-Espanol.pdf" target="_blank" class="button button-3d button-yellow button-xlarge nobottommargin">Español</a> -->
 							</div>
 							<div class="heading-block title-center nobottomborder topmargin-lg">
 								<h2>Github</h2>
 							</div>
 							<div class="center">
-								<a href="https://github.com/flash-coin" target="_blank" class="button button-3d button-yellow button-xlarge nobottommargin"><i class="icon-github"></i>FLASHCOIN REPOSITORY</a>
+								<a href="https://github.com/flash-coin" target="_blank"><img src="images/_newsite/web_img/gitFLASHCOINButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="gitFLASHCOINButton" style="width:35%;"></a>
+								<!-- <a href="https://github.com/flash-coin" target="_blank" class="button button-3d button-yellow button-xlarge nobottommargin"><i class="icon-github"></i>FLASHCOIN REPOSITORY</a> -->
 							</div>
 						</div>
 					</div>
