--- a/our-team.html
+++ b/our-team.html
@@ -192,7 +192,7 @@
 									</div>
 								</div>
 								<!-- David Nguyen end -->
-
+								<!--
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
 										<div class="team-image">
@@ -204,6 +204,7 @@
 										</div>
 									</div>
 								</div>
+								-->
 								<!--Dr Tai end-->
 
 								<div class="col-md-3 col-sm-3 bottommargin">
@@ -336,20 +337,18 @@
 
 						<div class="container clearfix">
 							
-							<!--Aaron Hockett-->
 							<div class="row topmargin-lg divcenter" style="max-width: 1000px;">
 								<div class="col-md-2 col-sm-2 bottommargin">
 								</div>
-								<!--Aaron Hockett end-->
-								<!--Gabriel M. -->
+								<!--OddsBrah -->
 								<div class="col-md-3 col-sm-3 bottommargin community-volunteers">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/no-photo.jpg" alt="Gabriel M.">
+											<img src="images/team/no-photo.jpg" alt="Mr. Odds">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title volunteers-title">
-												<h4>Gabriel M.</h4><span>Community Volunteer</span></div>
+												<h4>Mr. Odds</h4><span>Community Volunteer</span></div>
 										</div>
 									</div>
 								</div>
