--- a/our-team.html
+++ b/our-team.html
@@ -183,45 +183,6 @@
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/david-nguyen.jpg" alt="David Nguyen">
-										</div>
-										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>David Nguyen</h4><span>Blockchain R&D</span></div>
-										</div>
-									</div>
-								</div>
-								<!-- David Nguyen end -->
-								<!--
-								<div class="col-md-3 col-sm-3 bottommargin">
-									<div class="team">
-										<div class="team-image">
-											<img src="images/team/dr-tai.jpg" alt="Dr Tai">
-										</div>
-										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>Dr Tai</h4><span>Blockchain R&amp;D</span></div>
-										</div>
-									</div>
-								</div>
-								-->
-								<!--Dr Tai end-->
-
-								<div class="col-md-3 col-sm-3 bottommargin">
-									<div class="team">
-										<div class="team-image">
-											<img src="images/team/TranThaiSon.jpg" alt="Son Tran">
-										</div>
-										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>Son Tran</h4><span>Full Stack Developer</span></div>
-										</div>
-									</div>
-								</div>
-								<!--Son Tran end-->
-								<div class="col-md-3 col-sm-3 bottommargin">
-									<div class="team">
-										<div class="team-image">
 											<img src="images/team/chintan.png" alt="Chintan">
 										</div>
 										<div class="team-desc team-desc-bg">
@@ -257,6 +218,46 @@
 									</div>
 								</div>
 								<!--Danish end-->
+
+								<div class="col-md-3 col-sm-3 bottommargin">
+									<div class="team">
+										<div class="team-image">
+											<img src="images/team/no-photo.jpg" alt="David Nguyen">
+										</div>
+										<div class="team-desc team-desc-bg">
+											<div class="team-title">
+												<h4>David Nguyen</h4><span>Blockchain R&D</span></div>
+										</div>
+									</div>
+								</div>
+								<!-- David Nguyen end -->
+								<!--
+								<div class="col-md-3 col-sm-3 bottommargin">
+									<div class="team">
+										<div class="team-image">
+											<img src="images/team/dr-tai.jpg" alt="Dr Tai">
+										</div>
+										<div class="team-desc team-desc-bg">
+											<div class="team-title">
+												<h4>Dr Tai</h4><span>Blockchain R&amp;D</span></div>
+										</div>
+									</div>
+								</div>
+								-->
+								<!--Dr Tai end-->
+
+								<div class="col-md-3 col-sm-3 bottommargin">
+									<div class="team">
+										<div class="team-image">
+											<img src="images/team/no-photo.jpg" alt="Son Tran">
+										</div>
+										<div class="team-desc team-desc-bg">
+											<div class="team-title">
+												<h4>Son Tran</h4><span>Full Stack Developer</span></div>
+										</div>
+									</div>
+								</div>
+								<!--Son Tran end-->
 
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
