QT wallets and snapshot updated

--- a/index.html
+++ b/index.html
@@ -788,8 +788,8 @@
 														<img src="images/icons/icon_microsoft.png" />
 													</div>
 													<h3>Windows</h3>
-													<a href="downloads/flashcoin-0.10.3.0-win64-setup.exe">64 Bit</a><br />
-													<a href="downloads/flashcoin-0.10.3.0-win32-setup.exe">32 Bit</a><br />
+													<a href="downloads/Flashcoin-Qt-0.13.3-win64-setup.exe">64 Bit</a><br />
+													<a href="downloads/Flashcoin-Qt-0.13.3-win32-setup.exe">32 Bit</a><br />
 												</div>
 											</div>
 											<div class="col-md-3 col-sm-3">
@@ -798,9 +798,10 @@
 														<img src="images/icons/icon_ubuntu.png" />
 													</div>
 													<h3>Unbuntu</h3>
-													<a href="downloads/Flashcoin-Qt-Ubuntu-12.04-amd64.deb">12.04 64</a><br />
-													<a href="downloads/Flashcoin-Qt-Ubuntu-14.04-amd64.deb">14.04 64</a><br />
-													<a href="downloads/Flashcoin-Qt-Ubuntu-16.04-amd64.deb">16.04 64</a><br />
+													<a href="downloads/Flashcoin-Qt-0.13.3-Ubuntu-XX.04-amd64.deb">12.04 64</a><br />
+													<a href="downloads/Flashcoin-Qt-0.13.3-Ubuntu-XX.04-amd64.deb">14.04 64</a><br />
+													<a href="downloads/Flashcoin-Qt-0.13.3-Ubuntu-XX.04-amd64.deb">16.04 64</a><br />
+													<a href="downloads/Flashcoin-Qt-0.13.3-Ubuntu-XX.04-amd64.deb">18.04 64</a><br />
 												</div>
 											</div>
 											<div class="col-md-3 col-sm-3">
@@ -809,8 +810,8 @@
 														<img src="images/icons/icon_linux.png" />
 													</div>
 													<h3>Linux</h3>
-													<a href="downloads/Flashcoin-x86_64-unknown-linux-gnu.tar.gz">64 Bit</a><br />
-													<a href="downloads/Flashcoin-arm-linux-gnueabihf.tar.gz">Arm</a><br />
+													<a href="downloads/Flashcoin-0.13.0-x86_64-unknown-linux-gnu.tar.gz">64 Bit</a><br />
+													<a href="downloads/Flashcoin-0.13.0-arm-linux-gnueabihf.tar.gz">Arm</a><br />
 												</div>
 											</div>
 											<div class="col-md-3 col-sm-3">
@@ -819,7 +820,7 @@
 														<img src="images/icons/icon_apple.png" />
 													</div>
 													<h3>Mac</h3>
-													<a href="downloads/Flashcoin-Qt.dmg">dmg</a>
+													<a href="downloads/Flashcoin-Qt-0.13.3.dmg">dmg</a>
 												</div>
 											</div>
 										</div>
