--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
 													<div class="fbox-icon">
 														<img src="images/icons/icon_ubuntu.png" />
 													</div>
-													<h3>Unbuntu</h3>
+													<h3>Ubuntu</h3>
 													<a href="downloads/Flashcoin-Qt-0.13.3-Ubuntu-XX.04-amd64.deb">12.04 64</a><br />
 													<a href="downloads/Flashcoin-Qt-0.13.3-Ubuntu-XX.04-amd64.deb">14.04 64</a><br />
 													<a href="downloads/Flashcoin-Qt-0.13.3-Ubuntu-XX.04-amd64.deb">16.04 64</a><br />
