--- a/footer.html
+++ b/footer.html
@@ -155,45 +155,6 @@
 
 			<!-- External JavaScripts
 			============================================= -->
-
-			<style>
-				/*@media (min-width: 992px) {
-					#header .button {
-						margin: 30px 10px;
-						-webkit-transition: all .4s ease;
-						-o-transition: all .4s ease;
-						transition: all .4s ease;
-					}
-
-					body.top-search-open #header .button {
-						opacity: 0;
-					}
-
-					#header.sticky-header:not(.static-sticky) .button {
-						margin-top: 10px;
-						margin-bottom: 10px;
-					}
-				}
-
-				@media (max-width: 991px) {
-					#header .button {
-						display: none;
-						margin: 10px 5px 20px;
-					}
-
-					#header .button.d-block {
-						display: inline-block !important;
-					}
-
-					#header.dark.transparent-header,
-					#header.dark.semi-transparent {
-						background-color: transparent;
-						min-height: auto !important;
-					}
-				}*/
-			</style>
-
-			<!-- <script src="js/aos.js"></script> -->
 			<script defer src="js/fontawesome5.0.8.all.js"></script>
 
 			<!-- Footer Scripts
@@ -203,7 +164,7 @@
 <script>
 				jQuery(document).ready(function() {
 
-					jQuery('#primary-menu-trigger').click(function() {
+					jQuery('#primary-menu-trigger').bind('click',function() {
 						jQuery('#header .button').toggleClass("d-block");
 					});
 					if ($('.homepage').length)  {
@@ -297,7 +258,7 @@
 							window.scrollTo(0, 0);
 						}
 					}, 1);
-					$('.homepage .sub-menu ul li a').click(function(e) {
+					$('.homepage .sub-menu ul li a').bind('click', function(e) {
 						$('.sub-menu, .sub-menu li, li.hide-this').removeClass('sfHover');
 						$('.sub-menu ul, li.hide-this').hide();
 						if ($(window).width() < 768) {
@@ -313,7 +274,7 @@
 							}
 						}
 					});
-					$('.subpage ul li a, .widget_links ul li a').click(function() {
+					$('.subpage ul li a, .widget_links ul li a').bind('click',function() {
 						 var dhref = $(this).attr('data-href');
 							if ($('.subpage').length) {
 								if (dhref != undefined && dhref != '') {
@@ -340,7 +301,7 @@
 					}
 
 
-					$('.subpage .sub-menu').click(function() {
+					$('.subpage .sub-menu').bind('click',function() {
 						if ($(this).parent('sub-menu').hasClass('sfHover') || $(this).hasClass('sfHover')) {
 							$('.sub-menu, .sub-menu li, li.hide-this').removeClass('sfHover');
 							$('.sub-menu ul, li.hide-this').hide();
