--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<div class="">
 						<div class="row clearfix">
 							<div class="col-lg-12 text-center" id="data-pulled">
-								<div class="bottommargin-sm text-center" style="margin-top:-15px;">
+								<div class="bottommargin-sm text-center main-section-image">
 									<img class="bottommargin-sm" src="images/_newsite/web_img/WebsiteActualLogo.png" style="width:120px"/>
 								</div>
 								<div class="whitepaper bottommargin-sm text-center flash-latest-news">
@@ -147,7 +147,7 @@
 				<div class="content-wrap nopadding">
 					<!-- About ============================================= -->
 					<div id="about" class="page-section">
-						<div class="">
+						<div class="content-wrap" style="padding:40px 0px">
 							<div class="row clearfix">
 								<div class="col-lg-4 text-center">
 									<div class="topmargin-lg text-center">
