--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="en-US">
+<html lang="en-US">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<link rel="icon" href="favicon.png" type="image/png" sizes="16x16">
@@ -20,14 +20,14 @@
 		<meta name="twitter:image:src" content="https://www.flashcoin.io/clients/flashcoin/images/social-fb-plate-flashcoin.jpg" />
 		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600|Open+Sans|Roboto" rel="stylesheet">
 		<link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
-		<link rel="stylesheet" href="css/04.style.css?ver=1.3" type="text/css" />
+		<link rel="stylesheet" href="css/04.style.css?ver=1.7" type="text/css" />
 		<!-- <link rel="stylesheet" href="css/swiper.css" type="text/css" /> -->
 		<link rel="stylesheet" href="css/dark.css" type="text/css" />
 		<link rel="stylesheet" href="css/animate.css" type="text/css" />
 		<!-- <link rel="stylesheet" href="css/magnific-popup.css" type="text/css" /> -->
 		<link rel="stylesheet" href="css/font-icons.css" type="text/css" />
 		<!-- <link rel="stylesheet" href="css/et-line.css" type="text/css" /> -->
-		<link rel="stylesheet" href="css/04.custom.css?ver=1.2" type="text/css" />
+		<link rel="stylesheet" href="css/04.custom.css?ver=1.7" type="text/css" />
 		<link rel="stylesheet" href="css/responsive.css" type="text/css" />
 		<!-- Document Title
 	============================================= -->
@@ -117,7 +117,7 @@
 						<div class="row clearfix">
 							<div class="col-lg-12 text-center" id="data-pulled">
 								<div class="bottommargin-sm text-center main-section-image">
-									<img class="bottommargin-sm" src="images/_newsite/web_img/WebsiteActualLogo.png" style="width:120px"/>
+									<img class="bottommargin-sm" src="images/_newsite/web_img/WebsiteActualLogo.png" />
 								</div>
 								<div class="whitepaper bottommargin-sm text-center flash-latest-news">
 										<h3 style="">
@@ -133,8 +133,8 @@
 						</div>
 						<div class="row clearfix">
 							<div class="col-lg-12 text-center bottom-section" style="">
-								<a href="docs/FLASHWhitepaper.pdf?new" target="_blank" class="display-centrally"><img src="images/_newsite/web_img/WhitePaperButton.png?123" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="WhitePaperButton" style="width:150px"></a>
-								<a class="" href="#" data-scrollto="#about"><img src="images/_newsite/web_img/LearnMoreButton.png?123" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="LearnMoreButton" ></a>
+								<a href="docs/FLASHWhitepaper.pdf?new" target="_blank" class="display-centrally WhitePaperButton"><img src="images/_newsite/web_img/WhitePaperButton.png?123" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="WhitePaperButton" style="width:150px"></a>
+								<a class="LearnMoreButton" href="#" data-scrollto="#about"><img src="images/_newsite/web_img/LearnMoreButton.png?123" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="LearnMoreButton" ></a>
 							</div>
 						</div>
 					</div>
@@ -146,8 +146,11 @@
 			<section id="content" style="margin-bottom: 0px;">
 				<div class="content-wrap nopadding">
 					<!-- About ============================================= -->
-					<div id="about" class="page-section">
-						<div class="content-wrap" style="padding:40px 0px">
+					<div id="about" class="about-flash-section page-section">
+						<div class="container content-wrap" style="padding:40px 0px">
+							<div class="fancy-title title-border title-center nopadding">
+								<h1><span>About FLASH</span></h1>
+							</div>
 							<div class="row clearfix">
 								<div class="col-lg-4 text-center">
 									<div class="topmargin-lg text-center">
