--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 									<input class="form-control" style="color:red;" id="market_price_percentage" type="text" placeholder="" value="Market Price (%)" readonly="readonly">
 								</form>
 								<div class="whitepaper">
-									<a href="docs/FLASHWhitepaper.pdf?new" target="_blank"><img src="images/NewFlashWhitePaper2018.png"></a>
+									<a href="docs/FLASHWhitepaper.pdf" target="_blank"><img src="images/NewFlashWhitePaper2018.png"></a>
 								</div>
 							</div>
 						</div>
@@ -104,7 +104,7 @@
                    </marquee>-->
                    <br>
                    <div class="text-center">
-                   	<a href="https://vimeo.com/277786305" target="_blank" class="button button-border button-rounded button-light button-large">FLASHCON 2018</a>
+                   	<a href="https://www.youtube.com/channel/UCMOYSMroaTrgCNslbaQ6Urw/featured" target="_blank" class="button button-border button-rounded button-light button-large">FLASHCON 2018</a>
                    </div>
 			</section>
 			<!-- #slider end -->
@@ -133,7 +133,7 @@
 								<div class="col-sm-4 col-xs-12 ml-auto topmargin-lg whitepaper">
 									<h2>Whitepaper</h2>
 
-									<a href="docs/FLASHWhitepaper.pdf?new" target="_blank" class="button button-border button-rounded button-light button-large">English</a>
+									<a href="docs/FLASHWhitepaper.pdf" target="_blank" class="button button-border button-rounded button-light button-large">English</a>
 									<!--<a href="docs/FLASHWhitepaper.pdf" target="_blank"><img src="images/NewFlashWhitePaper2018.png"></a>-->
 									<a href="docs/FLASHWhitepaper-Espanol.pdf" target="_blank" class="button button-border button-rounded button-light button-large">Español</a>
 								</div>
@@ -875,7 +875,7 @@
 
 							<div class="center">
 								<!--<a href="docs/FLASHWhitepaper.pdf" target="_blank"><img style="width:300px" src="images/NewFlashWhitePaper2018.png"></a>-->
-								<a href="docs/FLASHWhitepaper.pdf?new" target="_blank" class="button button-3d button-yellow button-xlarge nobottommargin">ENGLISH</a>
+								<a href="docs/FLASHWhitepaper.pdf" target="_blank" class="button button-3d button-yellow button-xlarge nobottommargin">ENGLISH</a>
 								<a href="docs/FLASHWhitepaper-Espanol.pdf" target="_blank" class="button button-3d button-yellow button-xlarge nobottommargin">Español</a>
 							</div>
 
