--- a/index.html
+++ b/index.html
@@ -114,11 +114,15 @@
 			<section id="slider" class="full-screen slider-element clearfix">
 				<div class="vertical-middle ignore-header clearfix" style="z-index: 2;">
 					<div class="">
+						<div class="row clearfix webmainpart">
+							<div class="col-lg-12 text-center">
+								<div class="text-center main-section-image">
+									<img class="" src="images/_newsite/web_img/WebsiteActualLogo.png" />
+								</div>
+							</div>
+						</div>
 						<div class="row clearfix">
 							<div class="col-lg-12 text-center" id="data-pulled">
-								<div class="bottommargin-sm text-center main-section-image">
-									<img class="bottommargin-sm" src="images/_newsite/web_img/WebsiteActualLogo.png" />
-								</div>
 								<div class="whitepaper bottommargin-sm text-center flash-latest-news">
 										<h3 style="">
 											Everyday transactions made fast and easy.<br>Connecting the world in a FLASH.
