Added KPI section

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 		<meta name="twitter:image:src" content="https://www.flashcoin.io/clients/flashcoin/images/social-fb-plate-flashcoin.jpg" />
 		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600|Open+Sans|Roboto" rel="stylesheet">
 		<link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
-		<link rel="stylesheet" href="css/04.style.css?ver=1.7" type="text/css" />
+		<link rel="stylesheet" href="css/04.style.css?ver=1.8" type="text/css" />
 		<!-- <link rel="stylesheet" href="css/swiper.css" type="text/css" /> -->
 		<link rel="stylesheet" href="css/dark.css" type="text/css" />
 		<link rel="stylesheet" href="css/animate.css" type="text/css" />
 		<!-- <link rel="stylesheet" href="css/magnific-popup.css" type="text/css" /> -->
 		<link rel="stylesheet" href="css/font-icons.css" type="text/css" />
 		<!-- <link rel="stylesheet" href="css/et-line.css" type="text/css" /> -->
-		<link rel="stylesheet" href="css/04.custom.css?ver=1.7" type="text/css" />
+		<link rel="stylesheet" href="css/04.custom.css?ver=1.8" type="text/css" />
 		<link rel="stylesheet" href="css/responsive.css" type="text/css" />
 		<!-- Document Title
 	============================================= -->
@@ -572,15 +572,15 @@
 										because it is based on LTC, integration. If you operate an exchange and are interested in listing FLASH, please contact <a href="mailto:support@flashcoin.io" target="_top">support@flashcoin.io</a> to receive a file with details on our source
 										code repo for exchanges and a legal opinion regarding FLASH’s status as a security token (it’s a community coin, not a security)</p>
 									<ul class="grid-3 clients-grid nobottommargin clearfix">
-										<li><a href="https://www.cryptopia.co.nz/" target="_blank"><img src="images/exchanges/cryptopia.png" alt="Flash Cryptopia exchange"></a></li>
+										<li><a href="https://www.cryptopia.co.nz/Exchange/?market=FLASH_BTC" target="_blank"><img src="images/exchanges/cryptopia.png" alt="Flash Cryptopia exchange"></a></li>
 										<li><a href="https://einstein.exchange/" target="_blank"><img src="images/exchanges/einstein.jpg" alt="Flash Einstein exchange"></a></li>
-										<li><a href="https://crypto-bridge.org/" target="_blank"><img src="images/exchanges/crypto-bridge.png" alt="Flash exchange"></a></li>
-										<li><a href="https://indacoin.com/" target="_blank"><img src="images/exchanges/indacoin.png" alt="Flash exchange"></a></li>
-										<li><a href="https://www.coinexchange.io/" target="_blank"><img src="images/exchanges/coinexchange.png" alt="Flash exchange"></a></li>
+										<li><a href="https://wallet.crypto-bridge.org/market/BRIDGE.FLASH_BRIDGE.BTC" target="_blank"><img src="images/exchanges/crypto-bridge.png" alt="Flash exchange"></a></li>
+										<li><a href="https://indacoin.com/en_GB/change/buy-flash-with-cardusd" target="_blank"><img src="images/exchanges/indacoin.png" alt="Flash exchange"></a></li>
+										<li><a href="https://www.coinexchange.io/market/FLASH/BTC" target="_blank"><img src="images/exchanges/coinexchange.png" alt="Flash exchange"></a></li>
 										<li><a href="https://cryptowolf.eu/" target="_blank"><img src="images/exchanges/cryptowolf.png" alt="Flash exchange"></a></li>
-										<li><a href="https://crex24.com/" target="_blank"><img src="images/exchanges/crex24.png" alt="Flash exchange"></a></li>
-										<li class= "exchanges-border"><a href="https://upcoin.com/" target="_blank"><img src="images/exchanges/upcoin.png" alt="Flash exchange"></a></li>
-										<li class= "exchanges-border"><a href="https://www.boaexchange.com/" target="_blank"><img src="images/exchanges/boa_exchange.png" alt="Flash exchange"></a></li>
+										<li><a href="https://crex24.com/exchange/FLASH-BTC" target="_blank"><img src="images/exchanges/crex24.png" alt="Flash exchange"></a></li>
+										<li class= "exchanges-border"><a href="https://upcoin.com/trade/FLASH-BTC" target="_blank"><img src="images/exchanges/upcoin.png" alt="Flash exchange"></a></li>
+										<li class= "exchanges-border"><a href="https://www.boaexchange.com/market/FLASH_BTC" target="_blank"><img src="images/exchanges/boa_exchange.png" alt="Flash exchange"></a></li>
 									</ul>
 								</div>
 							</div>
@@ -801,6 +801,58 @@
 					</div>
 					<!-- #section-resources-whitepaper end -->
 
+					<!-- KPI ============================================= -->
+					<div id="kpi-section" class="kpi-section page-section">
+						<div class="container content-wrap" style="padding:10px 0px 40px">
+							<div class="fancy-title title-border title-center nopadding">
+								<h1 class="kpi-heading">Key <span>Performance</span> Indicators</h1>
+							</div>
+							<div class="row clearfix">
+								<div class="col-lg-4 text-center">
+									<div class="topmargin-lg text-center">
+										<div class="inner-section first-child">
+											<h2>Wallet Info</h2>
+											<h4>Addresses with Balance</h4>
+											<h4 class="color-gold" id="AddressesBalance">617641</h4>
+											<h4>Total Web-wallet Signups</h4>
+											<h4 class="color-gold" id="total_web_wallet">76968</h4>
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-4 text-center">
+									<div class="topmargin-lg text-center">
+										<div class="inner-section second-child">
+											<h2>Transaction Info</h2>
+											<h4 class="color-gold">Total Txs: <span class="color-gold" id="TotalTxs">1139428</span></h4>
+											<h2>Last 24 Hours</h2>
+											<h4>Total Txs 24h</h4>
+											<h4 class="color-gold" id="total_txns_24h">1219</h4>
+											<h4>Ave Txn Time</h4>
+											<h4 class="color-gold" id="ave_txn_time">1.20 sec</h4>
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-4 text-center">
+									<div class="topmargin-lg text-center">
+										<div class="inner-section last-child">
+											<h2>Coin Info</h2>
+											<h4>Circulating Supply</h4>
+											<h4 class="color-gold">900 milion</h4>
+											<h4>Total Blocks</h4>
+											<h4 class="color-gold" id="TotalBlocks">573783</h4>
+											<h4>Market Price</h4>
+											<h4 class="color-gold" id="market_price">166 sat |~0.0136 usd|</h4>
+											<h4>Rank</h4>
+											<h4 class="color-gold" id="current_rate">394</h4>
+										</div>
+									</div>
+								</div>
+							</div>
+							<!-- .row end -->
+						</div>
+						<!-- .container end -->
+					</div>
+
 					<!-- Community ============================================= -->
 					<a name="section-community"></a>
 					<div id="social-forum" class="page-section bottommargin-lg">
@@ -839,7 +891,7 @@
 			</div>
 			<!-- #footer end -->
 			</div>
-			<script src="js/key-indicator.js"></script>
+			<script src="js/key-indicator.js?ver=1.1"></script>
 			<script src="js/twitterFetcher_min.js"></script>
 			<script src="js/plugins.js"></script>
 	</body>
