Changed Exchange URLs

--- a/header.html
+++ b/header.html
@@ -129,6 +129,11 @@
 											</a>
 										</li>
 										<li>
+											<a href="#" data-href="#kpi">
+												<div>KPI</div>
+											</a>
+										</li>
+										<li>
 											<a href="https://github.com/flash-coin/" target="_blank">
 												<div>GITHUB</div>
 											</a>
