--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
 			}
 			function hover(element) {
 				var img = $(element).attr('data-imgname');
-				img = img+'Hover.png?123';
+				img = img+'Hover.png?ver=1.1';
 			  element.setAttribute('src', 'images/_newsite/web_img/'+img);
 			}
 
 			function unhover(element) {
 				var img = $(element).attr('data-imgname');
-				img = img+'.png?123';
+				img = img+'.png?ver=1.1';
 			  element.setAttribute('src', 'images/_newsite/web_img/'+img);
 			}
 
@@ -117,7 +117,7 @@
 						<div class="row clearfix webmainpart">
 							<div class="col-lg-12 text-center">
 								<div class="text-center main-section-image">
-									<img class="" src="images/_newsite/web_img/WebsiteActualLogo.png" />
+									<img class="" src="images/_newsite/web_img/WebsiteActualLogo.png?ver=1.1" />
 								</div>
 							</div>
 						</div>
@@ -129,16 +129,16 @@
 										</h3>
 								</div>
 								<div class="whitepaper bottommargin-sm bottommargin-child">
-									<a href="https://t.me/joinchat/C5go9ExsGGNeVvForEgb6w" target="_blank"><img src="images/_newsite/web_img/TelegramButton.png?123" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="TelegramButton" ></a>
-									<a href="https://discord.gg/2nFmMqA" target="_blank"><img src="images/_newsite/web_img/DiscordButton.png?123" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="DiscordButton" ></a>
+									<a href="https://t.me/joinchat/C5go9ExsGGNeVvForEgb6w" target="_blank"><img src="images/_newsite/web_img/TelegramButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="TelegramButton" ></a>
+									<a href="https://discord.gg/2nFmMqA" target="_blank"><img src="images/_newsite/web_img/DiscordButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="DiscordButton" ></a>
 								</div>
 
 							</div>
 						</div>
 						<div class="row clearfix">
 							<div class="col-lg-12 text-center bottom-section" style="">
-								<a href="docs/FLASHWhitepaper.pdf?new" target="_blank" class="display-centrally WhitePaperButton"><img src="images/_newsite/web_img/WhitePaperButton.png?123" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="WhitePaperButton" style="width:150px"></a>
-								<a class="LearnMoreButton" href="#" data-scrollto="#about"><img src="images/_newsite/web_img/LearnMoreButton.png?123" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="LearnMoreButton" ></a>
+								<a href="docs/FLASHWhitepaper.pdf?new" target="_blank" class="display-centrally WhitePaperButton"><img src="images/_newsite/web_img/WhitePaperButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="WhitePaperButton" style="width:150px"></a>
+								<a class="LearnMoreButton" href="#" data-scrollto="#about"><img src="images/_newsite/web_img/LearnMoreButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="LearnMoreButton" ></a>
 							</div>
 						</div>
 					</div>
@@ -304,7 +304,7 @@
 								</div>
 								<div class="col-md-12">
 									<div class="promo promo-center">
-										<a href="our-team.html"><img src="images/_newsite/web_img/MoreButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="MoreButton" style="width:13%;"></a>
+										<a href="our-team.html"><img src="images/_newsite/web_img/MoreButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="MoreButton" style="width:13%;"></a>
 									</div>
 								</div>
 							</div>
@@ -322,7 +322,7 @@
 						<div class="container clearfix">
 							<div class="row">
 								<div class="col-md-4">
-									<img src="images/circle.png" alt="">
+									<img src="images/circle.png?ver=1.1" alt="">
 								</div>
 								<div class="col-md-8">
 									<h2>Features</h2>
@@ -652,7 +652,7 @@
 								</ul>
 								<div class="col-md-12">
 									<div class="promo promo-center">
-										<a href="our-partners.html"><img src="images/_newsite/web_img/MoreButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="MoreButton" style="width:11%;"></a>
+										<a href="our-partners.html"><img src="images/_newsite/web_img/MoreButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="MoreButton" style="width:11%;"></a>
 									</div>
 								</div>
 							</div>
@@ -696,11 +696,11 @@
 									<span>With the web wallet, you can use an email address or your public address for sending and receiving coins.<br /><br />
 										The web wallet supports most browsers and mobile devices. There's nothing to download or install for maximum convenience.<br/>
 									</span>
-									<a href="https://wallet.flashcoin.io/" target="_blank"><img src="images/_newsite/web_img/WebWalletButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="WebWalletButton" style="width:70%; margin-top:20px;"></a>
+									<a href="https://wallet.flashcoin.io/" target="_blank"><img src="images/_newsite/web_img/WebWalletButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="WebWalletButton" style="width:70%; margin-top:20px;"></a>
 									<div class="fancy-title title-border">
 										<h2>Flash <span>Android</span> Wallet</h2>
 									</div>
-									<a href="https://play.google.com/store/apps/details?id=com.flash.wallet.android" target="_blank" class="button topmargin-sm play-store-btn"><img src="images/icons/playstor1.png"></a>
+									<a href="https://play.google.com/store/apps/details?id=com.flash.wallet.android" target="_blank" class="button topmargin-sm play-store-btn"><img src="images/icons/playstor1.png?ver=1.1"></a>
 								</div>
 								<div class="col-lg-8">
 									<div class="max-height col-lg-12">
@@ -711,7 +711,7 @@
 											<div class="col-md-3 col-sm-3">
 												<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
 													<div class="fbox-icon">
-														<img src="images/icons/icon_microsoft.png" />
+														<img src="images/icons/icon_microsoft.png?ver=1.1" />
 													</div>
 													<h3>Windows</h3>
 													<a href="downloads/flashcoin-0.10.3.0-win64-setup.exe">64 Bit</a><br />
@@ -754,13 +754,13 @@
 										<div class="fancy-title title-border">
 											<h2>Flash <span>iOS</span> Wallet</h2>
 										</div>
-										<a href="https://itunes.apple.com/in/app/coinodes-flash-wallet/id1397010514" target="_blank" class="button topmargin-sm app-store-btn"><img style="height:45px" src="images/icons/app-store.png"></a>
+										<a href="https://itunes.apple.com/in/app/coinodes-flash-wallet/id1397010514" target="_blank" class="button topmargin-sm app-store-btn"><img style="height:45px" src="images/icons/app-store.png?ver=1.1"></a>
 									</div>
 									<div class="col-lg-6" style="display: inline-block;">
 										<div class="fancy-title title-border">
 											<h2>Flash <span>Paper</span> Wallet</h2>
 										</div>
-										<a href="https://paperwallet.flashcoin.io/" target="_blank" class="button topmargin-sm app-store-btn"><img src="images/_newsite/web_img/PaperWalletButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="PaperWalletButton" style="width:80%;"></a>
+										<a href="https://paperwallet.flashcoin.io/" target="_blank" class="button topmargin-sm app-store-btn"><img src="images/_newsite/web_img/PaperWalletButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="PaperWalletButton" style="width:80%;"></a>
 									</div>
 								</div>
 							</div>
@@ -788,14 +788,14 @@
 								<h2>Download Whitepaper</h2>
 							</div>
 							<div class="center">
-								<a href="docs/FLASHWhitepaper.pdf" target="_blank"><img src="images/_newsite/web_img/EnglishButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="EnglishButton" style="width:15%; margin-right:10px;"></a>
-								<a href="docs/FLASHWhitepaper-Espanol.pdf" target="_blank"><img src="images/_newsite/web_img/EspanolButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="EspanolButton" style="width:15%; margin-left:10px;"></a>
+								<a href="docs/FLASHWhitepaper.pdf" target="_blank"><img src="images/_newsite/web_img/EnglishButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="EnglishButton" style="width:15%; margin-right:10px;"></a>
+								<a href="docs/FLASHWhitepaper-Espanol.pdf" target="_blank"><img src="images/_newsite/web_img/EspanolButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="EspanolButton" style="width:15%; margin-left:10px;"></a>
 							</div>
 							<div class="heading-block title-center nobottomborder topmargin-lg">
 								<h2>Github</h2>
 							</div>
 							<div class="center">
-								<a href="https://github.com/flash-coin" target="_blank"><img src="images/_newsite/web_img/gitFLASHCOINButton.png" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="gitFLASHCOINButton" style="width:35%;"></a>
+								<a href="https://github.com/flash-coin" target="_blank"><img src="images/_newsite/web_img/gitFLASHCOINButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="gitFLASHCOINButton" style="width:35%;"></a>
 							</div>
 						</div>
 					</div>
